--- a/dashboard.html
+++ b/dashboard.html
@@ -352,7 +352,7 @@
                     </div>
                     <div class="music-controls">
                         <audio controls>
-                            <source src="assets/music/Rels B, J Abecia - Te Regalo (Audio Oficial).mp3" type="audio/mpeg">
+                            <source src="assets/music/Rels B, J Abecia - Te Regalo (Audio Oficial).MP3" type="audio/mpeg">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                     </div>
